--- a/M2/zad3/index.html
+++ b/M2/zad3/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <title>Apka Reactowa!</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
+    <h1 class="text-center">Witamy</h1>
     <div id="app"></div>
 
     <script src="https://unpkg.com/react@15.3.2/dist/react.js"></script>
