--- a/M3/zad4/index.html
+++ b/M3/zad4/index.html
@@ -18,6 +18,7 @@
         <!-- <div class="stopwatch"></div>
       <ol class="list-order results"></ol> -->
     </div>
+    <div id="js-new"></div>
     <script src="https://unpkg.com/react@15.3.2/dist/react.js"></script>
     <script src="https://unpkg.com/react-dom@15.3.2/dist/react-dom.js"></script>
     <script type="text/javascript" src="script-compiled.js"></script>
