--- a/M3/zad4/index.html
+++ b/M3/zad4/index.html
@@ -7,18 +7,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
-    <div id="app" class="wrapper">
-        <!-- <nav class="controls">
-          <a href="#" class="btn btn-lg btn-success" id="js-start">Start</a>
-          <a href="#" class="btn btn-lg btn-danger" id="js-stop">Stop</a>
-          <a href="#" class="btn btn-lg btn-primary" id="js-save">Save</a>
-          <a href="#" class="btn btn-lg btn-info" id="js-reset">Reset</a>
-          <a href="#" class="btn btn-lg btn-warning" id="js-delete">Delete results</a>
-        </nav> -->
-        <!-- <div class="stopwatch"></div>
-      <ol class="list-order results"></ol> -->
-    </div>
-    <div id="js-new"></div>
+    <div id="app" class="wrapper"></div>
     <script src="https://unpkg.com/react@15.3.2/dist/react.js"></script>
     <script src="https://unpkg.com/react-dom@15.3.2/dist/react-dom.js"></script>
     <script type="text/javascript" src="script-compiled.js"></script>
