--- a/M3/zad2/index.html
+++ b/M3/zad2/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="app"></div>
-
+      <script type="text/javascript" src="node_modules/babel-polyfill/dist/polyfill.js"></script>
       <script src="https://unpkg.com/react@15.3.2/dist/react.js"></script>
       <script src="https://unpkg.com/react-dom@15.3.2/dist/react-dom.js"></script>
       <script src="https://unpkg.com/babel-core@5.8.38/browser.min.js"></script>
@@ -15,6 +15,7 @@
       <script>
         var App, Search, Gif;
       </script>
+
       <script type="text/babel" src="components/Search.js"></script>
       <script type="text/babel" src="components/Gif.js"></script>
       <script type="text/babel" src="components/App.js"></script>
